# apex-exec

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  deny.toml
.cargo/: audit.toml
.github/: dependabot.yml  pull_request_template.md  release.yml
docs/: ARCHITECTURE.md  COMPATIBILITY.md  DEPENDENCY_POLICY.md  DEVELOPMENT.md  MILESTONE_28_CHECKPOINT.md  MILESTONE_28_Q1_KICKOFF_PROMPT.md  MILESTONE_28_REVIEW_AND_RESUME_PLAN.md  NORTH_STAR_GRAMMAR_CENSUS.md  PHASE_2_BASELINE.md  RELEASING.md  STABILIZATION.md  STATUS.md  VISION.md
examples/: control-flow.apex  hello.apex  methods-exceptions.apex  milestone12-debug.apex  milestone21.apex
src/: ast.rs  ci.rs  compatibility.rs  dap.rs  debugger.rs  diagnostic.rs  editor.rs  hir.rs  hybrid.rs  lexer.rs  lib.rs  lsp.rs  main.rs  oracle.rs  parser.rs  project.rs  protocol.rs  repl.rs  runtime.rs  semantic.rs  span.rs  test_runner.rs  token.rs
tests/: compiler.rs  github_actions.rs  milestone10.rs  milestone11.rs  milestone12.rs  milestone13.rs  milestone14.rs  milestone15.rs  milestone16.rs  milestone17.rs  milestone18.rs  milestone19.rs  milestone2.rs  milestone20.rs  milestone21.rs  milestone22.rs  milestone23.rs  milestone24.rs  milestone25.rs  milestone26.rs  milestone27.rs  milestone28.rs  milestone3.rs  milestone4.rs  milestone5.rs  milestone6.rs  milestone7.rs  milestone8.rs  milestone9.rs  north_star.rs  s0_01_frontend.rs  s0_04_execution_context.rs  scenarios.rs  stabilization_runtime_graph_safety.rs  (+1 more)
website/: README.md  (+2 more)
(+307 files in other folders)
